--- a/src/components/Dj/Dj.css
+++ b/src/components/Dj/Dj.css
@@ -13,6 +13,9 @@
   width: 200px;
   cursor: pointer;
   user-select: none;
+  -webkit-user-drag: none;
+  -webkit-touch-callout: none; /* prevents long-press menu on iOS */
+  touch-action: none; /* disables default touch behavior */
 }
 
 .dj-content {
